# iroha

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: iroha2-dev-nightly.yml  iroha2-dev-pr-static.yml  iroha2-dev-pr-wasm.yml  iroha2-dev-pr.yml  iroha2-dev-sonar-dojo.yml  iroha2-dev.yml  iroha2-no-incorrect-image.yml
crates/iroha/tests/: asset.rs  asset_propagation.rs  nft.rs  non_mintable.rs  permissions.rs  roles.rs  sorting.rs  status_response.rs  transfer_asset.rs  transfer_domain.rs  tx_chain_id.rs  upgrade.rs
crates/iroha_cli/: Cargo.toml  CommandLineHelp.md  README.md
crates/iroha_cli/docs/: multisig.md
crates/iroha_cli/samples/: instructions.json  parameter.json  query.json
crates/iroha_cli/src/: main.rs
crates/iroha_core/src/: block.rs  kura.rs  metrics.rs  peers_gossiper.rs  state.rs
crates/iroha_data_model/src/: asset.rs  block.rs  isi.rs  lib.rs  name.rs  (+2 more)
crates/iroha_kagami/: Cargo.toml  CommandLineHelp.md  README.md  build.rs
crates/iroha_kagami/docs/: codec.md  kura.md  swarm.md  wasm.md
crates/iroha_kagami/src/: codec.rs  kura.rs  main.rs  swarm.rs  wasm.rs
crates/iroha_kagami/src/genesis/: generate.rs
crates/iroha_swarm/: Cargo.toml
crates/iroha_wasm_builder/: Cargo.toml  README.md
defaults/: docker-compose.local.yml  docker-compose.single.yml  docker-compose.yml  genesis.json
docs/: README.md
hooks/: pre-commit.sample
pytests/iroha_cli_tests/: README.md
pytests/iroha_torii_tests/: README.md
scripts/: build_wasm.sh
scripts/tests/: consistency.sh  multisig.recursion.sh  multisig.sh
(+66 files in other folders)
