[package]
name = "iroha_kagami"     # Translates to teacher, the exemplar, the looking glass.

edition.workspace = true
version.workspace = true
authors.workspace = true

description = "A tool used to generate cryptographic keys, docs, the schema and genesis block."

license.workspace = true

[lints]
workspace = true

[dependencies]
iroha_executor_data_model.workspace = true
iroha_data_model.workspace = true
iroha_crypto.workspace = true
iroha_schema_gen.workspace = true
iroha_primitives.workspace = true
iroha_genesis.workspace = true
iroha_test_samples.workspace = true
iroha_schema.workspace = true
iroha_core.workspace = true
iroha_version.workspace = true
iroha_wasm_builder.workspace = true

iroha_swarm = { path = "../iroha_swarm" }

clap = { workspace = true, features = ["derive"] }
clap-markdown = "0.1.4"
serde = { workspace = true, features = ["derive"] }
spinoff = { workspace = true, features = ["binary"] }
owo-colors = { workspace = true, features = ["supports-colors"] }
color-eyre.workspace = true
serde_json.workspace = true
derive_more.workspace = true
parity-scale-codec.workspace = true

inquire = "0.6.2"

[build-dependencies]
iroha_data_model = { workspace = true }

parity-scale-codec = { workspace = true }
serde_json = { workspace = true, features = ["std"]}
serde = { workspace = true }
color-eyre = { workspace = true }

[[bin]]
name = "kagami"
path = "src/main.rs"
